# RADIUSetting

./: .gitignore  BUILD_FIX_LOG.md  BUILD_STATUS.md  CI_BUILD_STATUS.md  DELIVERY_SUMMARY.md  README.md  config.json  index.html  package-lock.json  package.json  tauri.conf.json
.cargo/: config.toml
.ccg/: README.md
.ccg/tasks/radius-client-multiplatform/: analysis.md  context.jsonl  plan.md  requirements.md  task.json
.claude/: CLAUDE.md
.github/workflows/: build.yml
docs/: API.md  ARCHITECTURE.md  BUILD.md  CACHE_CLEANUP.md  GITHUB_TOKEN.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  TESTING.md  WINDOWS_BUILD.md
scripts/linux/: README.md  radius-setup.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/core/: auth_manager.rs  cert_validator.rs  config_loader.rs  mod.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/linux/: cert_store.rs  mod.rs  networkmanager.rs
src-tauri/src/platform/macos/: eapolclient.rs  keychain.rs  mod.rs
src-tauri/src/platform/windows/: cert_store.rs  mod.rs  netsh.rs  service_manager.rs  wlanapi.rs
src/components/: CertificateDialog.css  CertificateDialog.tsx  DiagnosticsPanel.css  DiagnosticsPanel.tsx
src/types/: tauri.ts
