[package]
name = "radius-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "radius_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.1", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wlanapi", "wincrypt", "winsvc", "winnt", "errhandlingapi", "sysinfoapi", "winerror"] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS specific dependencies

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
